<resources>
    <string name="app_default_name">Kin Ecosystem - Sample App</string>

    <string name="get_balance"><u>Get Balance</u></string>
    <string name="get_balance_d"><u>Get Balance: %d</u></string>
    <string name="failed_to_get_balance"><u>Failed to get balance, try again</u></string>
    <string name="show_public_address"><u>Show Public Address</u></string>
    <string name="native_spend_buy_a_sticker"><u>Native Spend - Buy A Sticker</u></string>
    <string name="copy_public_address"><u>Copy Public Address</u></string>
    <string name="native_earn"><u>Native Earn</u></string>
    <string name="gift_pay_to_user"><u>Gift / Pay to User</u></string>
    <string name="get_user_stats"><u>Get User Stats</u></string>
    <string name="logout_user"><u>Logout User</u></string>
    <string name="user_id"><u>User ID: %s</u></string>

    <string name="kin_marketplace_title">Kin Marketplace</string>
    <string name="kin_sdk_sample_app">Kin SDK Sample App</string>
    <string name="kin_marketplace">Kin Marketplace</string>
    <string name="version_name">Version: %s</string>
    <string name="enter_the_recipient_user_id">Enter the recipient user id:</string>
    <string name="pay">Pay</string>
    <string name="native_offer_content_activity">Native Offer Content Activity</string>
    <string name="account_not_logged_in">Account is not logged in</string>
    <string name="enter_user_id">Enter user id</string>
    <string name="generate">Generate</string>
    <string name="done">Done</string>
    <string name="order_history">Order History</string>
    <string name="backup_flow">Backup Flow</string>
    <string name="restore_flow">Restore Flow</string>
    <string name="gift">Gift</string>
</resources>
