<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/kinecosystem_white"
    tools:context="com.ecosystem.kin.app.main.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/kinrecovery_margin_main"
        android:layout_gravity="center"
        android:src="@drawable/kin_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/public_text_area"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="@dimen/kinecosystem_margin_large"
        android:layout_marginRight="@dimen/kinecosystem_margin_large"
        android:paddingLeft="@dimen/kinecosystem_main_margin"
        android:paddingRight="@dimen/kinecosystem_main_margin"
        android:background="@drawable/stroke_frame_rounded_primary"
        android:ellipsize="marquee"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/launch_marketplace"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.091"
        tools:text="GASDAGDFGHSDSDGDSFGKJ#$%IHSal;skdl;aksdl;askd;lksdDHASDKGSFDGJHALKHSD"/>


    <TextView
        android:id="@+id/show_public_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/kinecosystem_block_margin"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:text="@string/show_public_address"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/public_text_area"/>

    <TextView
        android:id="@+id/get_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/kinecosystem_block_margin"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/get_balance"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_public_address"
        app:layout_constraintVertical_bias="0.2"/>


    <Button
        android:id="@+id/launch_marketplace"
        android:layout_height="45dp"
        android:layout_width="0dp"
        android:layout_marginBottom="@dimen/kinecosystem_block_margin"
        android:layout_marginStart="@dimen/kinrecovery_margin_main"
        android:layout_marginEnd="@dimen/kinecosystem_block_margin"
        android:layout_gravity="bottom"
        android:background="@drawable/button_bg_primary_rounded"
        android:text="@string/kin_marketplace_title"
        android:textAllCaps="false"
        android:textColor="@color/kinecosystem_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/backup"
        app:layout_constraintEnd_toStartOf="@id/launch_orderHistory"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/get_balance"/>

    <Button
        android:id="@+id/launch_orderHistory"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="@dimen/kinecosystem_block_margin"
        android:layout_marginStart="@dimen/kinecosystem_block_margin"
        android:layout_marginEnd="@dimen/kinrecovery_margin_main"
        android:layout_gravity="bottom"
        android:background="@drawable/button_bg_primary_rounded"
        android:text="@string/order_history"
        android:textAllCaps="false"
        android:textColor="@color/kinecosystem_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/restore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toEndOf="@id/launch_marketplace"
        app:layout_constraintTop_toBottomOf="@id/get_balance"/>

    <Button
        android:id="@+id/backup"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="@dimen/kinecosystem_block_margin"
        android:layout_marginStart="@dimen/kinrecovery_margin_main"
        android:layout_marginEnd="@dimen/kinecosystem_block_margin"
        android:layout_gravity="bottom"
        android:background="@drawable/button_bg_primary_rounded"
        android:text="@string/backup_flow"
        android:textAllCaps="false"
        android:textColor="@color/kinecosystem_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/native_spend_button"
        app:layout_constraintEnd_toStartOf="@id/restore"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/launch_marketplace"/>

    <Button
        android:id="@+id/restore"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="@dimen/kinecosystem_block_margin"
        android:layout_marginStart="@dimen/kinecosystem_block_margin"
        android:layout_marginEnd="@dimen/kinrecovery_margin_main"
        android:layout_gravity="bottom"
        android:background="@drawable/button_bg_primary_rounded"
        android:text="@string/restore_flow"
        android:textAllCaps="false"
        android:textColor="@color/kinecosystem_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/native_spend_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toEndOf="@id/backup"
        app:layout_constraintTop_toBottomOf="@id/launch_orderHistory"/>

    <TextView
        android:id="@+id/native_spend_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/kinecosystem_block_margin"
        android:layout_marginBottom="@dimen/kinecosystem_block_margin"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:text="@string/native_spend_buy_a_sticker"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/native_earn_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/native_earn_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/kinecosystem_block_margin"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:text="@string/native_earn"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/pay_to_user_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/pay_to_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/kinecosystem_block_margin"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:text="@string/gift_pay_to_user"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/get_user_stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/get_user_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/kinecosystem_main_margin"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:text="@string/get_user_stats"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/logout_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/logout_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/kinecosystem_margin_large"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:text="@string/logout_user"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/user_id_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/sample_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/kinecosystem_main_margin"
        android:layout_marginRight="@dimen/kinecosystem_margin_large"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:text="Version:"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/user_id_textview"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/kinecosystem_main_margin"
        android:layout_marginLeft="@dimen/kinecosystem_margin_large"
        android:layout_gravity="bottom"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="User ID:"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="User ID: jsdhaskjdhasjdkhasjkdhakjsdhajksdhaksjhdakjshdakjsdhaskjdh"/>

</android.support.constraint.ConstraintLayout>
